@@ -139,6 +139,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1024: RpcConnectionPool::getConnection can cause NPE at 
+    initialization. (hyunsik)
+
     TAJO-1038: Remove use of Builder variable in Schema. (hyunsik)
 
     TAJO-1022: tsql does not work as background process(Hyoungjun Kim)
